[package]
name = "hackerchat-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-channel = "1.8.0"
futures = "0.3.26"
serde = { version = "1.0.152", features = ["std", "derive"] }
serde_json = "1.0.93"
socket2 = "0.4.7"
tokio = { version = "1.25.0", features = ["full"]}
